--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,11 @@
 {
-  "dependencies": {
-    "init": "^0.1.2"
-  }
+   "main": "server.js",
+   "type": "module",
+   "dependencies": {
+      "cookie-parser": "^1.4.7",
+      "cors": "^2.8.5",
+      "dotenv": "^16.5.0",
+      "express": "^5.1.0",
+      "init": "^0.1.2"
+   }
 }
